# nju_c_2021

./: .gitmodules  CMakeLists.txt  README.md
1-types-io/: CMakeLists.txt  admin-scanf.c  admin.c  circle.c  mol.c  scanf-examples.c  sphere.c
2-for-if-array/: CMakeLists.txt  leap-if-else-not.c  leap-if-else.c  leap.c  min-of-three.c  min-of-two.c  sum.c
3-for-a-whila/: CMakeLists.txt  binary-search.c  digits.c  palindrome.c  prime.c  selection-sort  selection-sort.c  starts.c
4-loops/: CMakeLists.txt  bubble-sort.c  counting-if.c  game-of-life.c  merge.c
5-function/: CMakeLists.txt  binary-search.c  game-of-life.c  leap.c  merge.c  palindrome.c  prime.c  selection-sort.c  starts.c
6-recursion/: CMakeLists.txt  bsearch-re.c  fib-array.c  fib-iter.c  fib-re.c  gcd-eucild-iter.c  gcd-euclidean-iter.c  gcd-euclidean-re.c  merge-sort.c  min-re.c  recursion.md  sum-re.c
7-data-types/: CMakeLists.txt  compare.c  data-type.md  loop.c  sums.c
8-pointer/: CMakeLists.txt  data.txt  pointer.c  pointer.md  selection-sort.c  strlen.c
9-pointer-more/: CMakeLists.txt  array-pointer.c  selection-sort-strings.c  strcmp.c  strcpy.c  strlen.c
