cmake_minimum_required(VERSION 3.21)
project(nju_c_2021 C)

set(CMAKE_C_STANDARD 11)

# class
#add_subdirectory(0-intro)
#add_subdirectory(1-types-io)
#add_subdirectory(2-for-if-array)
#add_subdirectory(3-for-a-whila)
#add_subdirectory(4-loops)
#add_subdirectory(5-function)
add_subdirectory(6-recursion)

# homework
#add_subdirectory(hw/1-types-io)
#add_subdirectory(hw/2-if-for-array)