add_executable(min-re min-re.c)

add_executable(sum-re sum-re.c)

add_executable(fib-re fib-re.c)

add_executable(fib-array fib-array.c)

add_executable(fib-iter fib-iter.c)

add_executable(gcd-eucild-re gcd-eucild-re.c)

add_executable(gcd-euclidean-re gcd-euclidean-re.c)

add_executable(gcd-eucild-iter gcd-eucild-iter.c)

add_executable(gcd-euclidean-iter gcd-euclidean-iter.c)

add_executable(bsearch-re bsearch-re.c)